# myNuToExamples

./: 1d_2d_3d_gradient.cpp  AuxFunctions.h  CMakeLists.txt  EnumsAndTypedefs.h  Makefile  README.md  cmake_install.cmake
1dExamples/: 1d_displacement.cpp  1d_displacement_1_element.cpp  1d_gradient.cpp  1d_gradient_uniaxial.cpp  1d_spring.cpp  1d_truss.cpp  1d_trusses_gmsh.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
1dExamples/dynamic/: 1d_uniaxial_tension_dynamic.cpp  CMakeLists.txt
2dExamples/: .directory  2d_bond_stress_slip.cpp  2d_bond_stress_slip_2_trusses.cpp  2d_feti.cpp  2d_feti_comparison.cpp  2d_feti_mpi_improved.cpp  2d_feti_nonlinear.cpp  2d_feti_structure.cpp  2d_feti_structure_compare.cpp  2d_feti_structure_compare_gradient_damage.cpp  2d_feti_structure_compare_phase_field.cpp  2d_feti_structure_gradient_damage.cpp  2d_feti_structure_lu_solver.cpp  2d_feti_structure_phase_field.cpp  2d_feti_structure_phase_field_json.cpp  2d_feti_total_mpi.cpp  2d_feti_total_mpi_sparse.cpp  2d_feti_total_mpi_sparse_new_mesh_format.cpp  2d_fibre_matrix_constraint_equation.cpp  2d_fibre_pullout_gmsh_gradient_damage.cpp  2d_fibre_pullout_structured_mesh.cpp  2d_framework.cpp  2d_gradient_uniaxial_fiber_constraint_parameter_identification_thought_experiment.cpp  2d_groupwise_visualization_test.cpp  2d_interface.cpp  2d_interface_pullout.cpp  2d_interface_rotated.cpp  2d_local_damage_3_point_bending.cpp  2d_phase_field_3_point_miehe.cpp  2d_phase_field_single_edge_notched_shear.cpp  2d_phase_field_single_edge_notched_tension.cpp  2d_phase_field_test.cpp  2d_test.cpp  2d_test_interface_elements_create.cpp  2d_trusses_gmsh.cpp  2d_uniaxial_tension_gradient_damage.cpp  CMakeLists.txt  ConjugateProjectedGradient.h  FetiSolver.h  ImportMesh.h  (+4 more)
2dExamples/benchmark/: 2d_benchmark_solvers.cpp  CMakeLists.txt
2dExamples/dynamic/: 2d_uniaxial_tension_dynamic.cpp  Makefile  cmake_install.cmake
2dExamples/feti/: 2d_feti_structure_compare_phase_field.cpp  2d_gradient_4_point_bending_symmetry.cpp  2d_gradient_three_point_bending.cpp  2d_linear_feti_benchmark.cpp  CMakeLists.txt
2dExamples/feti/gradient_damage/: 2d_feti_gradient_damage_3_point_bending.cpp  2d_gradient_4_point_bending_symmetry.cpp  CMakeLists.txt  paper_20_subs_chaco.cpp  paper_horizontal_split.cpp  strong_scaling.cpp  three_point_bending.mesh0  three_point_bending.mesh1  three_point_bending.mesh10  three_point_bending.mesh11  three_point_bending.mesh12  three_point_bending.mesh13  three_point_bending.mesh14  three_point_bending.mesh15  three_point_bending.mesh16  three_point_bending.mesh17  three_point_bending.mesh18  three_point_bending.mesh19  three_point_bending.mesh2  three_point_bending.mesh3  three_point_bending.mesh4  three_point_bending.mesh5  three_point_bending.mesh6  three_point_bending.mesh7  three_point_bending.mesh8  three_point_bending.mesh9
2dExamples/feti/linear_elastic/: 2d_feti_structure.cpp  2d_feti_structure_compare.cpp  2d_feti_structure_manual_partitions.cpp  2d_feti_structure_projected_gmres.cpp  CMakeLists.txt  rixen_farhat_heterogeneous_example.cpp
2dExamples/feti/phase_field/: 2d_feti_single_edge_notched_tension_compare.cpp  2d_feti_structure_phase_field_single_edge_notched_tension_test.cpp  2d_feti_structure_phase_field_single_edge_notched_tension_test_quads_coarse.cpp  CMakeLists.txt  feti_wedge_split_test.cpp
2dExamples/feti/virtual_constraints/: 2d_fetI_structure_phase_field_compare.cpp  2d_feti_structure.cpp  2d_feti_structure_compare.cpp  2d_feti_structure_gradient_damage.cpp  2d_feti_structure_gradient_damage_compare.cpp  2d_feti_structure_local_damage.cpp  2d_feti_structure_local_damage_compare.cpp  2d_feti_structure_phase_field.cpp  2d_feti_structure_phase_field_single_edge_notched_tension_test.cpp  2d_feti_structure_phase_field_tension.cpp  CMakeLists.txt
2dExamples/gradient_damage/: 2d_gradient_4_point_bending_symmetry.cpp  2d_gradient_L_shaped_panel.cpp  2d_single_edge_notched_tension_test_quads_ged.cpp  2d_test_convergence_of_damage_laws.cpp  CMakeLists.txt
2dExamples/gradient_damage/meshes/: 2d_single_edge_notched_tension_test_quads_30248_elements.msh  CMakeLists.txt
2dExamples/gradient_damage/octaveScripts/: CMakeLists.txt
2dExamples/interface/: 2d_random_fibres_in_matrix.cpp  2d_random_fibres_in_matrix_3_point_bending.cpp
2dExamples/local_damage/: 2d_single_edge_notched_tension_local_damage.cpp  CMakeLists.txt
2dExamples/local_damage/meshes/: CMakeLists.txt
2dExamples/local_damage/octaveScripts/: plotForceVsDisp.m
2dExamples/phase_field/: 2d_phase_field_1_element.cpp  2d_phase_field_3_point_miehe.cpp  2d_phase_field_4_point_bending_symmetry.cpp  2d_phase_field_L_shaped_panel.cpp  2d_phase_field_single_edge_notched_shear.cpp  2d_phase_field_single_edge_notched_tension.cpp  2d_phase_field_tensile_test.cpp  2d_phase_field_test.cpp  CMakeLists.txt  single_edge_notched_tension_test_quads.cpp  single_edge_notched_tension_test_quads_coarse.cpp  wedge_split_test.cpp
2dExamples/phase_field/meshes/: 2d_single_edge_notched_tension_test_quads.msh  single_edge_notched_tension_test_quads.geo  single_edge_notched_tension_test_quads_coarse.mesh1  single_edge_notched_tension_test_quads_coarse.msh  wedge_split_test.geo  wedge_split_test.msh
3dExamples/: .directory  3d_fibre_pullout.cpp  3d_fibre_pullout_gmsh.cpp  3d_fibre_pullout_interface.cpp  3d_gradient.cpp  3d_gradient_3_point_bending_fiber_constraint.cpp  3d_gradient_4_point_bending.cpp  3d_gradient_uniaxial_fiber_constraint.cpp  3d_gradient_uniaxial_fiber_constraint_parameter_identification_cuboid.cpp  3d_gradient_uniaxial_fiber_constraint_parameter_identification_dogbone.cpp  3d_gradient_uniaxial_fiber_markovic.cpp  3d_gradient_uniaxial_fiber_predamaged.cpp  3d_trusses_gmsh.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
3dExamples/3_point_bending_2017/: 3d_linear_constraints.cpp  3d_reference.cpp  3d_singular_matrix.cpp  CMakeLists.txt  run.sh  run_3d_reference.py
3dExamples/feti/: 3d_feti_gradient_damage.cpp  3d_feti_linear_elastic.cpp  CMakeLists.txt
3dExamples/feti/gradient_damage/: CMakeLists.txt  (+1 more)
(+339 files in other folders)
