#ADD_SUBDIRECTORY(dynamic)

      # 1d_gradient
  ADD_EXECUTABLE(1d_gradient 1d_gradient.cpp)
  TARGET_LINK_LIBRARIES(1d_gradient NuToMechanics NuToMath NuToBase ${Boost_LIBRARIES} ${LAPACK_LIBRARIES} ${ANN_LIBRARIES})
  IF (ENABLE_VISUALIZE)
    TARGET_LINK_LIBRARIES(1d_gradient NuToVisualize)
  ENDIF (ENABLE_VISUALIZE)
  IF(MUMPS_FOUND)
    TARGET_LINK_LIBRARIES(1d_gradient ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
  ENDIF(MUMPS_FOUND)
  IF(MINGW)
    SET_TARGET_PROPERTIES(1d_gradient PROPERTIES LINK_FLAGS -Wl,--enable-auto-import)
  ENDIF(MINGW)  