





    # 3d_gradient_uniaxial_fiber_predamaged
  #ADD_EXECUTABLE(3d_gradient_uniaxial_fiber_predamaged 3d_gradient_uniaxial_fiber_predamaged.cpp)
  #TARGET_LINK_LIBRARIES(3d_gradient_uniaxial_fiber_predamaged NuToMechanics NuToMath NuToBase ${Boost_LIBRARIES} ${LAPACK_LIBRARIES} ${ANN_LIBRARIES})
  #IF (ENABLE_VISUALIZE)
  #  TARGET_LINK_LIBRARIES(3d_gradient_uniaxial_fiber_predamaged NuToVisualize)
  #ENDIF (ENABLE_VISUALIZE)
  #IF(MUMPS_FOUND)
  #  TARGET_LINK_LIBRARIES(3d_gradient_uniaxial_fiber_predamaged ${MUMPS_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
  #ENDIF(MUMPS_FOUND)
